<resources>
    <string name="app_name">ForecastApp</string>
    <string name="show_forecast">show forecast</string>
    <string name="input_search_keyword">search keyword</string>
    <string name="search">search</string>
    <string name="favourite_cities">favourite cities</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="temperature_now">temp</string>
    <string name="humidity">humidity</string>
    <string name="pressure">Pressure</string>
    <string name="empty_favourites">No cities to show</string>
</resources>
