<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/search_edit_text"
            app:layout_constraintEnd_toStartOf="@+id/search_button" android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.17000002"
            android:hint="@string/input_search_keyword"/>
    <Button
            android:text="@string/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/search_button" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.17000002"
            app:layout_constraintHorizontal_bias="0.95"/>
    <Button
            android:text="@string/favourite_cities"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/favourite_cities_button"
            app:layout_constraintTop_toBottomOf="@+id/search_edit_text"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline4" app:layout_constraintVertical_bias="0.55"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/search_progress_bar"
            app:layout_constraintTop_toTopOf="@+id/search_edit_text"
            app:layout_constraintBottom_toBottomOf="@+id/search_edit_text"
            app:layout_constraintEnd_toEndOf="@+id/search_edit_text"
            app:layout_constraintStart_toStartOf="@+id/search_edit_text"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.49"
            android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:layout_marginEnd="5dp"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="168dp" android:id="@+id/guideline4"/>
</android.support.constraint.ConstraintLayout>