<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <TextView
            tools:text="50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pressure_value_text_view"
            app:layout_constraintTop_toTopOf="@+id/pressure" app:layout_constraintBottom_toBottomOf="@+id/pressure"
            app:layout_constraintStart_toEndOf="@+id/pressure" android:layout_marginStart="8dp"/>
    <TextView
            tools:text="50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/humedity_value_text_view"
            app:layout_constraintTop_toTopOf="@+id/humedity"
            app:layout_constraintBottom_toBottomOf="@+id/humedity" app:layout_constraintStart_toEndOf="@+id/humedity"
            android:layout_marginStart="8dp"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="130dp" android:id="@+id/guideline3"/>
    <TextView
            tools:text="50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/min_value_text_view"
            app:layout_constraintStart_toEndOf="@+id/min"
            app:layout_constraintTop_toTopOf="@+id/min"
            android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="@+id/min"/>
    <TextView
            tools:text="45"
            android:layout_height="wrap_content"
            android:id="@+id/now_value_text_view"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/now"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/now" app:layout_constraintBottom_toBottomOf="@+id/now"/>
    <TextView
            tools:text="45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/max_value_text_view"
            app:layout_constraintStart_toEndOf="@+id/max"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/max" app:layout_constraintBottom_toBottomOf="@+id/max"/>
    <TextView
            android:text="@string/min"
            android:id="@+id/min"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/now"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintVertical_bias="1.0"
            android:layout_marginBottom="16dp"
            style="@style/forecast_item_title"/>
    <TextView
            android:text="@string/max"
            android:id="@+id/max"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/now"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintVertical_bias="1.0"
            android:layout_marginBottom="16dp"
            style="@style/forecast_item_title"/>
    <TextView
            android:text="@string/temperature_now"
            android:id="@+id/now"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintVertical_bias="1.0"
            android:layout_marginBottom="16dp"
            style="@style/forecast_item_title"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/date_text_view" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="8dp"
            tools:text="@tools:sample/date/ddmmyy"
            app:layout_constraintBottom_toTopOf="@+id/humedity" app:layout_constraintVertical_bias="0.0"
            android:layout_marginTop="8dp"/>
    <TextView
            android:id="@+id/humedity"
            android:text="@string/humedity"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="@+id/min"
            app:layout_constraintHorizontal_bias="0.0"
            style="@style/forecast_item_title"/>
    <TextView
            android:text="@string/pressure"
            android:id="@+id/pressure"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/now_value_text_view"
            app:layout_constraintHorizontal_bias="0.0"
            style="@style/forecast_item_title"/>
</android.support.constraint.ConstraintLayout>